panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_postdecrement.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/arithmetic/test_postdecrement.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration (putchar~0 `fn(∅: int) -> int` (static putchar)) ∅)
   (declaration (printf~1 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition
      (f~2 `fn(p: ptr<int>) -> ptr<int>` (static f))
      (params
         (p~3 `ptr<int>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: int) -> int>` @16
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (65 `int` @24)))
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: int) -> int>` @16
                  (putchar~0 `fn(∅: int) -> int` (static putchar)))
               (10 `int` @24)))
         (return (p~3 `ptr<int>` @0))))
   (function-definition
      (main~4 `fn(∅: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~5 `int` @0)
         (argv~6 `ptr<ptr<char>>` @8))
      (compound-statement
         (definition (x~7 `int` @16) (42 `int` @16))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~6 `ptr<ptr<char>>` @8)
                        (sign-extend `unsigned long` @48 (1 `int` @56)))))
               (combine `int` @48
                  (combine `int` @52
                     (combine `int` @48
                        (assign `ptr<int>` @72
                           (unnamed-temporary~9 `ptr<int>` @72)
                           (addressof `ptr<int>` @72
                              (x~7 `int` @16)))
                        (assign `int` @48
                           (unnamed-temporary~10 `int` @48)
                           (deref `int` @48 (unnamed-temporary~9 `ptr<int>` @72))))
                     (combine `int` @52
                        (assign `ptr<int>` @56
                           (unnamed-temporary~8 `ptr<int>` @56)
                           (addressof `ptr<int>` @56
                              (deref `int` @56 (unnamed-temporary~9 `ptr<int>` @72))))
                        (assign `int` @52
                           (deref `int` @52 (unnamed-temporary~8 `ptr<int>` @56))
                           (subtract `int` @64
                              (deref `int` @64 (unnamed-temporary~8 `ptr<int>` @56))
                              (1 `int` @72)))))
                  (unnamed-temporary~10 `int` @48))))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~6 `ptr<ptr<char>>` @8)
                        (sign-extend `unsigned long` @48 (1 `int` @56)))))
               (x~7 `int` @16)))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~6 `ptr<ptr<char>>` @8)
                        (sign-extend `unsigned long` @48 (1 `int` @56)))))
               (combine `int` @48
                  (combine `int` @52
                     (combine `int` @48
                        (assign `ptr<int>` @72
                           (unnamed-temporary~12 `ptr<int>` @72)
                           (addressof `ptr<int>` @72
                              (deref `int` @72
                                 (call `ptr<int>` @80
                                    (addressof `ptr<fn(p: ptr<int>) -> ptr<int>>` @88
                                       (f~2 `fn(p: ptr<int>) -> ptr<int>` (static f)))
                                    (addressof `ptr<int>` @96
                                       (x~7 `int` @16))))))
                        (assign `int` @48
                           (unnamed-temporary~13 `int` @48)
                           (deref `int` @48 (unnamed-temporary~12 `ptr<int>` @72))))
                     (combine `int` @52
                        (assign `ptr<int>` @56
                           (unnamed-temporary~11 `ptr<int>` @56)
                           (addressof `ptr<int>` @56
                              (deref `int` @56 (unnamed-temporary~12 `ptr<int>` @72))))
                        (assign `int` @52
                           (deref `int` @52 (unnamed-temporary~11 `ptr<int>` @56))
                           (subtract `int` @64
                              (deref `int` @64 (unnamed-temporary~11 `ptr<int>` @56))
                              (1 `int` @72)))))
                  (unnamed-temporary~13 `int` @48))))
         (expression
            (call `int` @20
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~1 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~6 `ptr<ptr<char>>` @8)
                        (sign-extend `unsigned long` @48 (1 `int` @56)))))
               (x~7 `int` @16)))
         (return (x~7 `int` @16)))))

----- stderr -----
